@@ -10,7 +10,6 @@
  * @requires extend
  * @requires event_emitter
  * @requires render_assistant
- * @requires physics_assistant
  * @requires map
  * @requires gui
  */
@@ -22,7 +21,6 @@ define(function (require) {
         extend                = require("ethon/extend"),
         eventEmitter          = require("ethon/event_emitter"),
         renderAssistant       = require("ethon/render_assistant"),
-        physicsAssistant      = require("ethon/physics_assistant"),
         resourceAssistant     = require("ethon/resource_assistant"),
         Map                   = require("ethon/map"),
         GUI                   = require("ethon/gui"),
@@ -49,16 +47,10 @@ define(function (require) {
         renderAssistant.setCanvas(canvas, width, height);
 
         this.scenes = {};
-        this.activeScene = 'main';
+        this.activeScene = null;
 
         this.assetsToLoad = 0;
         this.assetsLoaded = 0;
-
-        this.scenes[this.activeScene] = {
-            map: new Map(),
-            souls: [],
-            gui: new GUI()
-        };
 
         showFPS = options.showFPS;
     };
@@ -82,39 +74,16 @@ define(function (require) {
     }
 
     /**
-     * Add Soul for being processed by the game.
      *
-     * @method addSoul
-     * @param {Object} soul Soul to be added on the game loop.
+     * @method addScene
      */
-    Game.prototype.addSoul = function (soul, scene) {
-        scene = scene || 'main';
-        this.scenes[scene] = this.scenes[scene] || { map: new Map(), gui: new GUI(), souls: []};
-        this.scenes[scene].souls.push(soul);
-    };
+    Game.prototype.addScene = function (name, scene) {
+        this.scenes[name] = scene;
+        this.scenes[name].init();
 
-    /**
-     * Set the map object for the game.
-     *
-     * @method setMap
-     * @param {Object} map Map to be added on the game loop.
-     */
-    Game.prototype.setMap = function (map, scene) {
-        scene = scene || 'main';
-        this.scenes[scene] = this.scenes[scene] || { map: new Map(), gui: new GUI(), souls: []};
-        this.scenes[scene].map = map;
-    };
-
-    /**
-     * Set the GUI object for the game.
-     *
-     * @method setGUI
-     * @param {Object} gui GUI to be added on the game loop.
-     */
-    Game.prototype.setGUI = function (gui, scene) {
-        scene = scene || 'main';
-        this.scenes[scene] = this.scenes[scene] || { map: new Map(), gui: new GUI(), souls: []};
-        this.scenes[scene].gui = gui;
+        if (this.activeScene === null) {
+            this.activeScene = name;
+        }
     };
 
     /**
@@ -130,87 +99,30 @@ define(function (require) {
     };
 
     /**
+     * TODO:
      * Update souls and check collisions between them.
      *
      * @method update
      */
     Game.prototype.update = function () {
-        var i, l, j, ll,
-            souls         = this.scenes[this.activeScene].souls,
-            soul1, soul2,
-            now           = new Date(),
+        var now           = new Date(),
             dt            = new Date(now.getTime() - elapsedTime.getTime()).getMilliseconds() / 1000;
 
-        // Update all souls
-        for (i = 0, l = souls.length; i < l; i += 1) {
-            if (souls[i].remove) {
-                souls.splice(i, 1);
-                i -= 1;
-                break;
-            }
-            souls[i].update(dt);
-        }
-
-        // Check souls collisions
-        for (i = 0, l = souls.length; i < l; i += 1) {
-            if (souls[i].checkCollision) {
-                for (j = 0, ll = souls.length; j < ll; j += 1) {
-                    soul1 = souls[i];
-                    soul2 = souls[j];
-
-                    // Check for souls collision
-                    // 
-                    // If souls collide custom events are triggered based on souls name.
-                    if (soul1 !== soul2) {
-                        if (physicsAssistant.soulsCollision(soul1, soul2)) {
-                            // Trigger event for name - name
-                            this.trigger("collision_" + soul1.getName() + "_" + soul2.getName(), soul1, soul2);
-
-                            // Trigger event for name - group
-                            if (soul2.getBody().collisionGroup !== undefined) {
-                                this.trigger("collision_" + soul1.getName() + "_" + soul2.getBody().collisionGroup, soul1, soul2);
-
-                                // Trigger event for group - group
-                                if (soul1.getBody().collisionGroup !== undefined) {
-                                    this.trigger("collision_" + soul1.getBody().collisionGroup + "_" + soul2.getBody().collisionGroup, soul1, soul2);
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-
-        this.trigger('after_update', dt);
+        this.scenes[this.activeScene].update(dt);
+        this.scenes[this.activeScene].afterUpdate(dt);
 
         elapsedTime = now;
     };
 
     /**
+     * TODO: 
      * Render map, souls and GUI in strict order. Use requestAnimationFrame for better
      * performance.
      *
      * @method render
      */
-    Game.prototype.render = function render() {
-        var i, l,
-            souls = this.scenes[this.activeScene].souls,
-            map   = this.scenes[this.activeScene].map,
-            gui   = this.scenes[this.activeScene].gui;
-
-        // Clear the canvas
-        renderAssistant.clear();
-
-        // Render the map
-        map.render();
-
-        // Render all souls
-        for (i = 0, l = souls.length; i < l; i += 1) {
-            souls[i].render(renderAssistant);
-        }
-
-        // Render GUI
-        gui.render();
+    Game.prototype.render = function (render) {
+        this.scenes[this.activeScene].render(renderAssistant);
 
         if (showFPS) {
             renderAssistant.drawText(10, 10, "FPS: " + fps);
@@ -242,9 +154,7 @@ define(function (require) {
      */
     Game.prototype.setActiveScene = function (scene) {
         this.trigger("exit_scene_" + this.activeScene);
-        this.scenes[this.activeScene].gui.setVisible(false);
         this.activeScene = scene;
-        this.scenes[this.activeScene].gui.setVisible(true);
         this.trigger("enter_scene_" + scene);
     };
 
