@@ -8,6 +8,13 @@ Game
 * Merged render and update loop. Using request animation frame method.
 * Trigger event for collision group for both bodies. Ex: collision_bullets_asteroids
 * Trigger event for after update function
+* Added support for adding Scenes as objects
+* Delegate render and update to active scene
+
+Scene
+-----
+
+* Added Scene basic class
 
 RenderAssistant
 ---------------
